updated: ProjectController ProjectMapper ProjectService
created:
ProjectPhotoDto
openapi.yaml for swagger
custom EntityNotFoundException
